<resources>
    <string name="app_name">DailyPlanner</string>
    <string name="title">Название</string>
    <string name="Date">Дата</string>
    <string name="time_start">Время начала</string>
    <string name="start">Начало</string>
    <string name="end">Конец</string>
    <string name="description">Описание</string>
    <string name="empty_field_warning">Поля не могут быть пустыми</string>
    <string name="new_event">Новое событие</string>
    <string name="event">Событие</string>
    <string name="time_field_warning">Время начала не может быть больше времени окончания!</string>
    <string name="database_error_message">Не удалось загрузить данные</string>
    <string name="no_events">Событий нет</string>
</resources>