<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="addNewEventViewModel"
            type="com.example.android.dailyplanner.viewmodel.AddNewEventViewModel" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AddNewEventFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme = "@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
                app:title="@string/new_event"/>

        </com.google.android.material.appbar.AppBarLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >


        <ImageView
            android:id="@+id/titleImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_title_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/title"
            android:inputType="textMultiLine"
            android:paddingTop="8dp"
            android:layout_marginEnd="8dp"
            android:paddingBottom="8dp"
            android:text="@={addNewEventViewModel.eventLiveData.name}"
            app:layout_constraintBottom_toBottomOf="@+id/titleImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/titleImageView"
            app:layout_constraintTop_toTopOf="@+id/titleImageView" />


        <ImageView
            android:id="@+id/dateImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_calendar_today_24"
            app:layout_constraintBottom_toTopOf="@id/timeImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleImageView" />

        <EditText
            android:id="@+id/dateEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/Date"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true"
            android:paddingTop="8dp"
            android:layout_marginEnd="8dp"
            android:paddingBottom="8dp"
            android:text="@={addNewEventViewModel.eventLiveData.date}"
            app:layout_constraintBottom_toBottomOf="@+id/dateImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dateImageView"
            app:layout_constraintTop_toTopOf="@+id/dateImageView" />

        <ImageView
            android:id="@+id/timeImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_access_time_24"
            app:layout_constraintEnd_toStartOf="@+id/timeStartEditText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateImageView" />


        <EditText
            android:id="@+id/timeStartEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/start"
            android:inputType="time"
            android:focusable="false"
            android:clickable="true"
            android:paddingTop="8dp"
            android:text="@={addNewEventViewModel.eventLiveData.startTime}"
            app:layout_constraintBottom_toBottomOf="@+id/timeImageView"
            app:layout_constraintEnd_toStartOf="@+id/timeEndEditText"
            app:layout_constraintStart_toEndOf="@+id/timeImageView"
            app:layout_constraintTop_toTopOf="@+id/timeImageView" />

        <View
            android:id="@+id/viewLine"
            android:layout_width="6dp"
            android:layout_height="1dp"
            android:background="@android:color/black"
            app:layout_constraintStart_toEndOf="@+id/timeStartEditText"
            app:layout_constraintEnd_toStartOf="@id/timeEndEditText"
            app:layout_constraintTop_toTopOf="@id/timeStartEditText"
            app:layout_constraintBottom_toBottomOf="@id/timeStartEditText"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <EditText
            android:id="@+id/timeEndEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:hint="@string/end"
            android:inputType="time"
            android:focusable="false"
            android:clickable="true"
            android:paddingTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@={addNewEventViewModel.eventLiveData.endTime}"
            app:layout_constraintBottom_toBottomOf="@+id/timeStartEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/timeStartEditText"
            app:layout_constraintTop_toTopOf="@+id/timeStartEditText" />


        <ImageView
            android:id="@+id/descriptionImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_notes_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeImageView" />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:paddingTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@={addNewEventViewModel.eventLiveData.description}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/descriptionImageView"
            app:layout_constraintTop_toTopOf="@id/descriptionImageView"
            app:layout_constraintVertical_bias="0.0" />




    </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:backgroundTint="@color/colorAccent"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:maxImageSize="30dp"
            app:pressedTranslationZ="@dimen/fab_pressed_elevation"
            app:srcCompat="@drawable/ic_baseline_done_24"
            app:tint="@android:color/white"
            app:useCompatPadding="true" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
